Enable native access required by Java 24
Fixes #1765